# pornhub-graph

./: .gitignore  .travis.yml  README.md  aiohttp_v1.py  config.json  export_dot.py  fabfile.py  index.html  log.md  pyppeteer_v1.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_crawler_from_root.py  run_crawler_from_top.py  storage.py  test.py  tests.py  tmp.html
.github/workflows/: deploy.yml
backend/: crawler.py  export_dot.py  optional_info_fetch.py  post_process.py  run_crawler_from_top.py  storage.py
data/: export_graph_0.dot  export_graph_1.dot  export_graph_2.dot  export_graph_3.dot  export_graph_4.dot  export_graph_5.dot  export_graph_6.dot  semhub.gephi
js/: main.js
src/: crawler.py  storage.py  utils.py
www/: config.json  habr.md  index.html
www/css/: style.css
www/js/: main.js
