[tool.poetry]
name = "pornhub-graph"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.3"
pyppeteer = "^0.2.6"
aiohttp = "^3.7.4"
pymongo = "^3.12.0"
motor = "^2.5.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
asynctest = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
